Squashed commit of the following:
commit d1efafb793e7b67af613da8cc61b066090498985
Author: Joel Dixon <38357562+dixonjoel@users.noreply.github.com>
Date:   Tue Feb 21 15:30:25 2023 -0600

    Make examples specifically depend on 1.0.0 to avoid future breakages (#230)

    * Make examples specifically depend on 1.0.0 to avoid future breakages

    * Use ^1.0.0 to get the latest 1.x version

commit fac80f6cf5e20a97751d60c27b10c1ef605a3c45
Author: GitHub Action <action@github.com>
Date:   Tue Feb 21 20:18:20 2023 +0000

    Promote NIMS package version and update Sphinx generated files in _docs

commit 8a8adbf080adfa8c634b136d1e0c0f3d45d49a32
Author: Joel Dixon <38357562+dixonjoel@users.noreply.github.com>
Date:   Tue Feb 21 12:01:03 2023 -0600

    Setting Development Status to Production/Stable (#225)

    Setting Development Status to Production/Stable prior to our upcoming 1.0 release

    Signed-off-by: Joel Dixon <joel.dixon@ni.com>

--- a/examples/nifgen_standard_function/pyproject.toml
+++ b/examples/nifgen_standard_function/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["National Instruments"]
 [tool.poetry.dependencies]
 python = "^3.8"
 nifgen = ">=1.4.3"
-ni-measurementlink-service = "*"
+ni-measurementlink-service = "^1.0.0"
 click = ">=7.1.2"
 grpcio = "*"
 
