--- a/examples/nidaqmx_analog_input/pyproject.toml
+++ b/examples/nidaqmx_analog_input/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["National Instruments"]
 [tool.poetry.dependencies]
 python = "^3.8"
 nidaqmx = ">=0.6.3"
-ni-measurementlink-service = "*"
+ni-measurementlink-service = "^1.0.0"
 click = ">=7.1.2"
 
 [tool.poetry.dev-dependencies]
